--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
     ],
     "bin": ["bin/console"],
     "require": {
-        "php": ">=7.2.5",
-        "composer/composer": "1.*",
-        "composer/installers": "1.*",
+        "php": "^8.0",
+        "composer/composer": "^2",
+        "composer/installers": "^2",
 
         "zikula/coreinstaller-bundle": "dev-3.1",
         "zikula/formextension-bundle": "dev-3.1",
@@ -45,9 +45,9 @@
         "zikula/sortable-columns": "1.*",
 
         "symfony/console": "^5.4",
-        "symfony/contracts": "^2.3",
+        "symfony/contracts": "^2",
         "symfony/framework-bundle": "^5.4",
-        "symfony/maker-bundle": "1.*",
+        "symfony/maker-bundle": "^1",
         "symfony/security-bundle": "^5.4",
         "symfony/string": "^5.4",
         "symfony/validator": "^5.4",
@@ -56,23 +56,23 @@
         "sensio/framework-extra-bundle": "^6",
         "symfony/browser-kit": "^5.4",
         "symfony/debug-bundle": "^5.4",
-        "symfony/doctrine-bridge": "^5.2",
+        "symfony/doctrine-bridge": "^5.4",
         "symfony/expression-language": "^5.4",
         "symfony/messenger": "^5.4",
-        "symfony/monolog-bundle": "^3.6",
+        "symfony/monolog-bundle": "^3",
         "symfony/notifier": "^5.4",
-        "symfony/polyfill-uuid": "^1.19",
-        "symfony/polyfill-intl-messageformatter": "^1.19",
+        "symfony/polyfill-uuid": "^1",
+        "symfony/polyfill-intl-messageformatter": "^1",
         "symfony/runtime": "^5.4",
         "symfony/stopwatch": "^5.4",
         "symfony/web-link": "^5.4",
         "symfony/web-profiler-bundle": "^5.4",
-        "nikic/php-parser": "4.*",
+        "nikic/php-parser": "^4",
 
-        "doctrine/doctrine-bundle": "2.*",
-        "doctrine/orm": "2.*",
-        "stof/doctrine-extensions-bundle": "1.*",
-        "liip/imagine-bundle": "2.*"
+        "doctrine/doctrine-bundle": "^2",
+        "doctrine/orm": "^2",
+        "stof/doctrine-extensions-bundle": "^1",
+        "liip/imagine-bundle": "^2"
     },
     "autoload": {
         "psr-4": { "Zikula\\Bundle\\CoreBundle\\": "" }
